--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300&display=swap');
+a {
+    font-style: none;
+    
+}
 .main {
     width: 90%;
     height: 100vh;
@@ -85,3 +90,36 @@ nav {
       position:relative;
       left: 11vh;
   }
+  #img_one {
+      margin-top: 25vh
+    }
+
+.central-content {
+    color: white;
+    text-align: center;
+    font-weight: lighter;
+    padding-bottom: 160px;
+    position:relative;
+    top:15vh;
+}
+
+.central-content h1 {
+    font-size: 4em;
+    font-weight: 100;
+    text-shadow: -0.25px 0 white, 0 0.25px white, 0.25px 0 white, 0 0.25px white;
+}
+
+.central-content p {
+    font-size: 2em;
+    font-weight: 100;
+    margin-top: 3vh;
+    margin-bottom: 5vh;
+    text-shadow: -0.25px 0 white, 0 0.25px white, 0.25px 0 white, 0 0.25px white;
+}
+
+.central-content a {
+    color:white;
+    font-size: 1.5em;
+    font-weight: 100;
+    text-shadow: -0.25px 0 white, 0 0.25px white, 0.25px 0 white, 0 0.25px white;
+}
