--- a/main.css
+++ b/main.css
@@ -47,13 +47,10 @@ a {
     background: url("images/4.jpg")no-repeat;
 }
 
-nav {
-    display: block;
-}
 
 #header-nav {
     position: relative;
-    width: 845px;
+    width: 950px;
     height: 36px;
     top: 18px;
     margin: 0 auto;
@@ -78,6 +75,29 @@ nav {
     background-position: 50% -30px;
     cursor: pointer;
 }
+#search {
+    display: flex;
+    position: absolute;
+    left: 88%;
+    top:-0.1vh
+    
+}
+
+#search_bar {
+    width: 80px;
+    height: 25px;
+    position: absolute;
+    left:2.5vh;
+    top: 0.7vh;
+    background-color:#A6B4B7;
+}
+
+ #search i {
+     color:white;
+     position: absolute;
+     top: 1vh;
+ }
+
 .footer {
     display: flex;
     flex-direction: row;
@@ -85,6 +105,7 @@ nav {
     align-content: space-around;
     font-size: 0.7em;
 }
+
 #second {
     position: relative;
     left: 10vh;
